--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,15 @@
 cmake_minimum_required(VERSION 3.3)
 
 # TODO: Change “game” to the name of your game (no spaces!):
-set(GAME_EXE game)
+set(GAME_EXE Battleship)
 
 project(${GAME_EXE} CXX)
 include(.cs211/cmake/CMakeLists.txt)
 
 # TODO: PUT ADDITIONAL MODEL .cxx FILES IN THIS LIST:
 set(MODEL_SRC
+        src/position_set.cxx
+        src/ship.cxx
         src/model.cxx)
 
 # TODO: PUT ADDITIONAL NON-MODEL (UI) .cxx FILES IN THIS LIST:
